Updated contact matching test to use data factory

--- a/force-app/test/default/classes/SummitEventsContactMatching_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsContactMatching_TEST.cls
@@ -3,97 +3,69 @@
 // license that can be found in the LICENSE file.
 // Created by Matthew Hubert on 1/5/2021.
 
-@isTest
+@IsTest
 public class SummitEventsContactMatching_TEST {
-    @isTest
+    @IsTest
     static void SummitEventsContactMatching1() {
-        Summit_Events__c event = new Summit_Events__c();
-        event.Name = 'Test event';
-        event.Contact_Matching_Rules__c = 'Use Salesforce Duplicate Rule';
-        event.Contact_Creation_Duplicate_Rule__c = 'Standard Contact Duplicate Rule';
-        event.Custom_Metadata_Contact_Matching_Method__c = 'Admissions';
-        insert event;
+        List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
+        Summit_Events_Registration__c seaTestRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'Test', 'Record', 'test@example.com', '55555', '1971-03-22', '2012', null);
+        Summit_Events__c seaTestEvent = SummitEventsTestSharedDataFactory.getEventRecord(seaTestInstances[1].Event__c);
+        seaTestEvent.Contact_Matching_Rules__c = 'Use Salesforce Duplicate Rule';
+        seaTestEvent.Contact_Creation_Duplicate_Rule__c = 'Standard Contact Duplicate Rule';
+        seaTestEvent.Custom_Metadata_Contact_Matching_Method__c = 'Admissions';
+        update seaTestEvent;
 
-        Summit_Events_Instance__c instance = new Summit_Events_Instance__c();
-        instance.Event__c = event.Id;
-        instance.Instance_Start_Date__c = System.today();
-        instance.Instance_Start_Time__c = Time.newInstance(0, 0, 0, 0);
-        instance.Instance_End_Date__c = System.today();
-        instance.Instance_End_Time__c = Time.newInstance(23, 59, 59, 0);
-        instance.Active_Status__c = 'Active';
-        insert instance;
+        Test.startTest();
+        seaTestRegistration.Status__c = 'Registered';
+        seaTestRegistration.Registrant_Preferred_First_Name__c = 'Big T';
+        update seaTestRegistration;
 
-        Summit_Events_Registration__c registration = new Summit_Events_Registration__c();
-        registration.Event__c = event.Id;
-        registration.Event_Instance__c = instance.Id;
-        registration.Status__c = 'Registered';
-        registration.Registrant_First_Name__c = 'Test';
-        registration.Registrant_Last_Name__c = 'Record';
-        registration.Registrant_Email__c = 'test@example.com';
-        registration.Registrant_Preferred_First_Name__c = 'Big T';
-        insert registration;
+        seaTestRegistration.Contact__c = null;
+        seaTestRegistration.Registrant_Date_of_Birth__c = System.today();
+        update seaTestRegistration;
 
-        registration.Contact__c = null;
-        registration.Registrant_Date_of_Birth__c = System.today();
-        update registration;
+        seaTestRegistration.Contact__c = null;
+        seaTestRegistration.Registrant_First_Name__c = 'Tester';
+        update seaTestRegistration;
 
-        registration.Contact__c = null;
-        registration.Registrant_First_Name__c = 'Tester';
-        update registration;
-
-        registration.Contact__c = null;
-        registration.Registrant_Phone__c = '1234567890';
-        update registration;
+        seaTestRegistration.Contact__c = null;
+        seaTestRegistration.Registrant_Phone__c = '1234567890';
+        update seaTestRegistration;
+        Test.stopTest();
     }
 
-    @isTest
+    @IsTest
     static void SummitEventsContactMatching2() {
-        Summit_Events__c event = new Summit_Events__c();
-        event.Name = 'Test event';
-        event.Contact_Matching_Rules__c = 'Use Salesforce Duplicate Rule';
-        event.Contact_Creation_Duplicate_Rule__c = 'Standard Contact Duplicate Rule';
-        event.Custom_Metadata_Contact_Matching_Method__c = 'Admissions';
-        event.Contact_Matching_Multiple_Match_Behavior__c = 'Skip matching';
-        insert event;
+        List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
+        Summit_Events_Registration__c seaTestRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'Test', 'Record', 'test@example.com', '55555', '1971-03-22', '2012', null);
+        Summit_Events__c seaTestEvent = SummitEventsTestSharedDataFactory.getEventRecord(seaTestInstances[1].Event__c);
+        seaTestEvent.Contact_Matching_Rules__c = 'Use Salesforce Duplicate Rule';
+        seaTestEvent.Contact_Creation_Duplicate_Rule__c = 'Standard Contact Duplicate Rule';
+        seaTestEvent.Custom_Metadata_Contact_Matching_Method__c = 'Admissions';
+        seaTestEvent.Contact_Matching_Multiple_Match_Behavior__c = 'Skip matching';
+        update seaTestEvent;
 
-        Summit_Events_Instance__c instance = new Summit_Events_Instance__c();
-        instance.Event__c = event.Id;
-        instance.Instance_Start_Date__c = System.today();
-        instance.Instance_Start_Time__c = Time.newInstance(0, 0, 0, 0);
-        instance.Instance_End_Date__c = System.today();
-        instance.Instance_End_Time__c = Time.newInstance(23, 59, 59, 0);
-        instance.Active_Status__c = 'Active';
-        insert instance;
-
+        Test.startTest();
         Database.DMLOptions dml = new Database.DMLOptions();
-        dml.DuplicateRuleHeader.allowSave = true;
+        dml.duplicateRuleHeader.allowSave = true;
 
         Contact c1 = new Contact(FirstName = 'Test', LastName = 'Record', Email = 'test@example.com');
         insert c1;
 
         Contact c2 = new Contact(FirstName = 'Test', LastName = 'Record', Email = 'test@example.com');
         Database.insert(c2, dml);
+        seaTestRegistration.Registrant_Preferred_First_Name__c = 'Big T';
+        update seaTestRegistration;
 
-        Summit_Events_Registration__c registration = new Summit_Events_Registration__c();
-        registration.Event__c = event.Id;
-        registration.Event_Instance__c = instance.Id;
-        registration.Status__c = 'Registered';
-        registration.Registrant_First_Name__c = 'Test';
-        registration.Registrant_Last_Name__c = 'Record';
-        registration.Registrant_Email__c = 'test@example.com';
-        registration.Registrant_Preferred_First_Name__c = 'Big T';
-        insert registration;
-        update registration; // Since it only runs on update
-
-        registration = [SELECT Id, Contact__c FROM Summit_Events_Registration__c WHERE Id = :registration.Id];
+        Summit_Events_Registration__c registration = [SELECT Id, Contact__c FROM Summit_Events_Registration__c WHERE Id = :seaTestRegistration.Id];
         System.assert(String.isBlank(registration.Contact__c));
 
+        seaTestEvent.Contact_Matching_Multiple_Match_Behavior__c = 'Match with most recently modified';
+        update seaTestEvent;
 
-        event.Contact_Matching_Multiple_Match_Behavior__c = 'Match with most recently modified';
-        update event;
-
-        update registration;
+        update seaTestRegistration;
         registration = [SELECT Id, Contact__c FROM Summit_Events_Registration__c WHERE Id = :registration.Id];
         System.assert(String.isNotBlank(registration.Contact__c));
+        Test.stopTest();
     }
 }
