--- a/force-app/main/default/classes/SummitEventsRegisterController.cls
+++ b/force-app/main/default/classes/SummitEventsRegisterController.cls
@@ -28,7 +28,6 @@ public with sharing class SummitEventsRegisterController {
     public String applicantType { get; set; }
     public Boolean evtHasAppointments { get; set; }
     public String birthDateString { get; set; }
-    public String dataLayerLocationType { get; set; }
     public Decimal totalEventCost { get; set; }
     public List<Summit_Events_Fee__c> eventFeeList { get; set; }
     public String phoneType { get; set; }
@@ -89,7 +88,7 @@ public with sharing class SummitEventsRegisterController {
                     SELECT Id, Name, Event__r.Name, Event__r.Event_Name__c, Event__r.Id, Instance_Title__c, Active_Status__c, Capacity__c,
                             Event__r.Event_description__c, Event__r.Audience__c, Current_Available_Capacity__c,
                             Location_Type_Override__c, Location_Address_Override__c, Event__r.Close_Event_Days_Before__c, Location_Map_Link_Override__c, Location_Title_Override__c,
-                            Event_Fee_Additional_Attribute_Override__c, Event_Fee_Additional_Override__c, Event_Fee_Override__c, Event_Fee_Attribute_Override__c,
+                            Event_Fee_Additional_Allocation_Override__c, Event_Fee_Additional_Override__c, Event_Fee_Override__c, Event_Fee_Allocation_Override__c,
                             Instance_Start_Date__c, Instance_Start_Time__c, Instance_End_Date__c, Instance_End_Time__c, Instance_Time_Zone__c
                     FROM Summit_Events_Instance__c
                     WHERE Id = :eventInformation.instanceId
@@ -122,7 +121,7 @@ public with sharing class SummitEventsRegisterController {
                             Tracking_Event_Registration__c, Ask_Date_Of_Birth__c, Event_Type__c, Contact_Creation__c, Contact_Matching_Rules__c,
                             Ask_Third_Party_Registrant__c, Registration_Email_Restriction__c, Ask_Pronoun__c, Keep_Registration_Open_During_Event__c,
                             Close_Event_Days_Before__c, Ask_Title__c, Ask_Company_Organization__c, Event_Fee__c, Event_Fee_Additional__c,
-                            Event_Fee_Additional_Attribute__c, Event_Fee_Attribute__c, Display_Optional_Donation__c
+                            Event_Fee_Additional_Allocation__c, Event_Fee_Allocation__c, Display_Optional_Donation__c
                     FROM Summit_Events__c
                     WHERE Id = :eventInformation.eventId
                     LIMIT 1
@@ -241,14 +240,14 @@ public with sharing class SummitEventsRegisterController {
                 totalEventCost += evtInstance.Event_Fee_Override__c;
                 eventFeeList.add(new Summit_Events_Fee__c(
                         Event_Fee__c = evtInstance.Event_Fee_Override__c,
-                        Event_Fee_Attribute__c = evtInstance.Event_Fee_Attribute_Override__c,
+                        Event_Fee_Allocation__c = evtInstance.Event_Fee_Allocation_Override__c,
                         Event_Fee_Type__c = 'Event'
                 ));
             } else if (eventPage.Event_Fee__c != null) {
                 totalEventCost += eventPage.Event_Fee__c;
                 eventFeeList.add(new Summit_Events_Fee__c(
                         Event_Fee__c = eventPage.Event_Fee__c,
-                        Event_Fee_Attribute__c = eventPage.Event_Fee_Attribute__c,
+                        Event_Fee_Allocation__c = eventPage.Event_Fee_Allocation__c,
                         Event_Fee_Type__c = 'Event'
                 ));
             }
@@ -257,14 +256,14 @@ public with sharing class SummitEventsRegisterController {
                 totalEventCost += evtInstance.Event_Fee_Additional_Override__c;
                 eventFeeList.add(new Summit_Events_Fee__c(
                         Event_Fee__c = evtInstance.Event_Fee_Additional_Override__c,
-                        Event_Fee_Attribute__c = evtInstance.Event_Fee_Additional_Attribute_Override__c,
+                        Event_Fee_Allocation__c = evtInstance.Event_Fee_Additional_Allocation_Override__c,
                         Event_Fee_Type__c = 'Event Additional'
                 ));
             } else if (eventPage.Event_Fee_Additional__c != null) {
                 totalEventCost += eventPage.Event_Fee_Additional__c;
                 eventFeeList.add(new Summit_Events_Fee__c(
                         Event_Fee__c = eventPage.Event_Fee_Additional__c,
-                        Event_Fee_Attribute__c = eventPage.Event_Fee_Additional_Attribute__c,
+                        Event_Fee_Allocation__c = eventPage.Event_Fee_Additional_Allocation__c,
                         Event_Fee_Type__c = 'Event Additional'
                 ));
             }
@@ -403,7 +402,7 @@ public with sharing class SummitEventsRegisterController {
         }
         for (Schema.PicklistEntry PicklistValue : PicklistValues) {
             if (YourFieldName == 'Registrant_Third_Party_Status__c') {
-                if (eventPage != null) {
+                if (eventPage != null && String.isNotBlank(eventPage.Ask_Third_Party_Registrant__c)) {
                     if (eventPage.Ask_Third_Party_Registrant__c.contains(PicklistValue.getValue())) {
                         picklists.add(new SelectOption(PicklistValue.getValue(), PicklistValue.getLabel()));
                     }
@@ -417,7 +416,6 @@ public with sharing class SummitEventsRegisterController {
     }
 
     public PageReference saveContactRegistration() {
-        Boolean newContactCreated = false;
         PageReference optionPage;
 
         if (String.isNotBlank(phoneType) && eventPage.Ask_Phone__c.containsIgnoreCase('with type')) {
@@ -445,7 +443,7 @@ public with sharing class SummitEventsRegisterController {
             eventRegistration.Registrant_Date_of_Birth__c = Date.parse(birthDateString);
         }
 
-        if (!String.isBlank(applicantType)) {
+        if (String.isNotBlank(applicantType)) {
             eventRegistration.Registrant_Applicant_Type__c = applicantType;
         } else if (eventPage.Ask_Applicant_Type__c == 'Do not ask but assign First-Year') {
             eventRegistration.Registrant_Applicant_Type__c = 'First-Year';
@@ -457,7 +455,7 @@ public with sharing class SummitEventsRegisterController {
 
         //Check and create fees and save on registration
         List<Summit_Events_Fee__c> recordedEventFeeList = [
-                SELECT Id, Event_Fee_Type__c, Event_Fee_Attribute__c, Event_Fee__c
+                SELECT Id, Event_Fee_Type__c, Event_Fee_Allocation__c, Event_Fee__c
                 FROM Summit_Events_Fee__c
                 WHERE Event_Fee_Type__c != 'Appointment'
                 AND Event_Fee_Type__c != 'Appointment Additional'
@@ -476,7 +474,7 @@ public with sharing class SummitEventsRegisterController {
                 }
             }
             List<Summit_Events_Fee__c> deleteEventFees = [
-                    SELECT Id, Event_Fee_Type__c, Event_Fee_Attribute__c, Event_Fee__c
+                    SELECT Id, Event_Fee_Type__c, Event_Fee_Allocation__c, Event_Fee__c
                     FROM Summit_Events_Fee__c
                     WHERE Event_Fee_Type__c != 'Appointment'
                     AND Event_Fee_Type__c != 'Appointment Additional'
@@ -494,10 +492,6 @@ public with sharing class SummitEventsRegisterController {
         eventRegistration.Event__c = eventInformation.eventId;
         eventRegistration.Event_Instance__c = eventInformation.instanceId;
         eventRegistration.Contact__c = contactId;
-        if (newContactCreated) {
-            eventRegistration.New_Contact_Created__c = true;
-        }
-
         eventRegistration = rCRUD.updateRegistration(eventRegistration, incomingEventRegistrationId, registrantAudience, eventFeeList);
         eventInformation.registrationId = eventRegistration.Id;
 
@@ -558,8 +552,7 @@ public with sharing class SummitEventsRegisterController {
             try {
                 delete deletableFees;
             } catch (Exception ex) {
-                ApexPages.Message myMsg = new ApexPages.Message(ApexPages.Severity.WARNING, ex.getMessage());
-                ApexPages.addMessage(myMsg);
+                System.debug(ex.getMessage());
             }
         }
 
